--- a/package.json
+++ b/package.json
@@ -8,9 +8,19 @@
   },
   "type": "module",
   "scripts": {
-    "start": "node --experimental-specifier-resolution=node --loader ts-node/esm ./index.ts"
+    "start": "node --experimental-specifier-resolution=node --loader ts-node/esm ./index.ts",
+    "test": "jest --maxWorkers=50%"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^28.1.6",
+    "babel-jest": "^28.1.3",
+    "jest": "^28.1.3",
+    "jest-dynalite": "^3.6.1",
+    "jest-extended": "^3.0.2",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
   }
 }
