--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "type": "module",
   "scripts": {
     "start": "node --experimental-specifier-resolution=node --loader ts-node/esm ./index.ts",
-    "test": "jest --maxWorkers=50%"
+    "test": "jest --maxWorkers=50%",
+    "test:ci": "jest --maxWorkers=2 --ci"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
