--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,10 +3,8 @@ updates:
   - package-ecosystem: "npm" # Also works for Yarn.
     directory: "/"
     schedule:
-      interval: "weekly"
-      day: "saturday"
+      interval: "monthly"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "weekly"
-      day: "saturday"
+      interval: "monthly"
